// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AppHeader: Match snapshots 1 1`] = `
<View>
  <StatusBar
    animated={false}
    backgroundColor="#17212D"
<<<<<<< HEAD
<<<<<<< HEAD
    barStyle="dark-content"
=======
>>>>>>> 172e2a2... :bug: Fixed Notch in Android
=======
    barStyle="dark-content"
>>>>>>> f2e7a32... :bug: Fixed Various Issues
    hidden={false}
    showHideTransition="fade"
  />
  <Themed.Header
    centerComponent={
      <Logo
        color="#FFF"
        isDark={false}
      />
    }
    containerStyle={
      Array [
        Object {
          "borderBottomWidth": 2,
        },
        Object {
          "backgroundColor": "#17212D",
          "borderBottomColor": "#009CFF",
        },
      ]
    }
    leftComponent={
      <Themed.Icon
        color="#FFF"
        name="menu"
        onPress={[Function]}
        type="simple-line-icon"
      />
    }
    rightComponent={
      <Themed.Icon
        color="#FFF"
        name="home"
        onPress={[Function]}
        type="antdesign"
      />
    }
  />
</View>
`;

exports[`AppHeader: Match snapshots 2 1`] = `
<View>
  <StatusBar
    animated={false}
    backgroundColor="#FFF"
<<<<<<< HEAD
<<<<<<< HEAD
    barStyle="light-content"
=======
>>>>>>> 172e2a2... :bug: Fixed Notch in Android
=======
    barStyle="light-content"
>>>>>>> f2e7a32... :bug: Fixed Various Issues
    hidden={false}
    showHideTransition="fade"
  />
  <Themed.Header
    centerComponent={
      <Logo
        color="#17212D"
        isDark={true}
      />
    }
    containerStyle={
      Array [
        Object {
          "borderBottomWidth": 2,
        },
        Object {
          "backgroundColor": "#FFF",
          "borderBottomColor": "#E88C0C",
        },
      ]
    }
    leftComponent={
      <Themed.Icon
        color="#17212D"
        name="menu"
        onPress={[Function]}
        type="simple-line-icon"
      />
    }
    rightComponent={
      <Themed.Icon
        color="#17212D"
        name="home"
        onPress={[Function]}
        type="antdesign"
      />
    }
  />
</View>
`;
